--- a/front end/travellerregister.html
+++ b/front end/travellerregister.html
@@ -102,161 +102,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- banner-bottom -->
 
 	<!-- blog -->
-<div class="banner-bdy blg">
-	<div class="container">
-	<div class="blog">
-		<div style="width: 800px ;margin-left: auto;margin-right: auto;margin-bottom: 47px;">
-			<h2>Blog</h2>
-		<p class="gal-txt">Nam libero tempore, cum soluta nobis est eligendi optio 
-		cumque nihil impedit quo minus id quod maxime placeat facere possimus,
-		omnis voluptas assumenda est, omnis dolor repellendus.</p>
-		</div>
+    <div class="banner-bdy blg">
+		<div class="container">
+			<div class="blog">
+                <div style="width: 250px ;margin-left: auto;margin-right: auto;margin-bottom: 47px; margin-top: 47px;">
+					<h2>Register</h2>
+					<p>Register as a new Traveller User here.</p>
+				</div>
+ 				
+				<div style="width: 550px ;margin-left: auto;margin-right: auto;margin-bottom: 47px; margin-top: 47px;">
+				<form>
+					<div class="form-group">
+					  <label for="exampleInputEmail1">User Name</label>
+					  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter username">
+					  <small id="emailHelp" class="form-text text-muted">Note*: Do not use offensive name.</small>
+					</div>
+					<div class="form-group">
+					  <label for="exampleInputPassword1">Password</label>
+					  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+					</div>
+					<div class="form-group">
+						<label for="exampleInputPassword1">Re-Enter Password</label>
+						<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-Enter your Password">
+					  </div>				
+					<button type="submit" class="btn btn-primary">Submit</button>
+					<div style="float: right;"><a href="guideregister.html">Want to Register as a Guide User ?</a></div>
+				  </form>
+				</div>
+			</div>
 		
-		<div style="width: 300px ;margin-left: auto;margin-right: auto;margin-bottom: 47px;">
-			
-			<form class="form-inline my-2 my-lg-0">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			  </form>
 		</div>
-		<!-- <div class="header-top" style="float: left; padding-left: 13px;">
-			<input type="text" style="width: 330px;" placeholder="Search" required=" ">
-		</div>
-		<div class="clearfix"> </div> -->
-		
-		<div class="blog-grids">
-			
-			<div class="col-md-3 blog-grid">
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/4.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a> 
-								<span>May 20,2015.</span>
-						</div>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui 
-						blanditiis et quas molestias excepturi sint occaecati cupiditate....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/5.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a>
-							<span>May 20,2015.</span>
-						</div>
-						<p>At et accusamus et iusto....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 blog-grid">
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/6.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a>
-							<span>May 20,2015.</span>
-						</div>
-						<p>At vero eos et accusamus et iusto odio dignissimos....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/7.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a>
-							<span>May 20,2015.</span>
-						</div>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui 
-						blanditiis et quas molestias excepturi sint occaecati cupiditate....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 blog-grid">
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/10.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a> 
-							<span>May 20,2015.</span>
-						</div>
-						<p>At et accusamus et iusto....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/5.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a> 
-							<span>May 20,2015.</span>
-						</div>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus
-						molestias excepturi sint occaecati cupiditate....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 blog-grid">
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/4.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a>
-							<span>May 20,2015.</span>
-						</div>
-						<p>At et accusamus et iusto excepturi sint occaecati cupiditate....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-				<div class="blog-grid1">
-					<a href="single.html"><img src="images/6.jpg" alt=" " /></a>
-					<div class="blog-grid1-info">
-						<div class="soluta">
-							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a> 
-							<span>May 20,2015.</span>
-						</div>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui 
-						blanditiis et quas molestias excepturi sint occaecati cupiditate....</p>
-						<div class="red-mre">
-							<a href="single.html">Read More</a> 
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-		<nav>
-		  <ul class="pagination">
-			<li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-			<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-			<li><a href="#">2 <span class="sr-only">(current)</span></a></li>
-			<li><a href="#">3 <span class="sr-only">(current)</span></a></li>
-			<li><a href="#">4 <span class="sr-only">(current)</span></a></li>
-			<li><a href="#">5 <span class="sr-only">(current)</span></a></li>
-			<li class="abled"><a href="#" aria-label="Next"><span aria-hidden="true">»</span></a></li>
-		  </ul>
-		</nav>
-	</div>
-	</div>
 	</div>
 <!-- //blog -->
 <!-- //slider -->
