--- a/front end/travellerregister.html
+++ b/front end/travellerregister.html
@@ -48,14 +48,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-bottom-left">
 					<a href="index.html">Travel<span>services</span></a>
 				</div>
-				<div class="header-bottom-right" style="width: 550px;">
+				<div class="header-bottom-right" style="width: 400px;">
 					<span class="menu">MENU</span>
 					<ul class="nav1">
-						<li class="cap"><a href="index.html">HOME</a></li>					
-						<li><a href="gallery.html">GALLERIES</a></li>
+						<li><a href="index.html">HOME</a></li>
 						<li><a href="index.html">BLOG</a></li>
-						<li><a href="travellerregister.html">REGISTER</a></li>
-						<li><a href="login.html">LOGIN</a></li>					
+						<li class="cap"><a href="travellerregister.html">REGISTER</a></li>
+						<li><a href="login.html">LOGIN</a></li>
 					</ul>
 					<!-- script for menu -->
 						<script> 
