--- a/front end/index.html
+++ b/front end/index.html
@@ -132,7 +132,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="blog-grid1-info">
 						<div class="soluta">
 							<a href="single.html">Nam libero tempore, cum soluta nobis est eligendi</a> 
-
+								<span>May 20,2015.</span>
 						</div>
 						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui 
 						blanditiis et quas molestias excepturi sint occaecati cupiditate....</p>
