--- a/front end/index.html
+++ b/front end/index.html
@@ -238,5 +238,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 	</script>
 <!-- //here ends scrolling icon -->
+	<script src="js/indexjs"></script>
 </body>
 </html>
