--- a/front end/index.html
+++ b/front end/index.html
@@ -237,6 +237,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 	</script>
 <!-- //here ends scrolling icon -->
-	<script src="js/indexjs"></script>
+	<script src="js/view_js/index.js"></script>
 </body>
 </html>
