--- a/front end/travellerregister.html
+++ b/front end/travellerregister.html
@@ -212,6 +212,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 	</script>
 <!-- //here ends scrolling icon -->
-<script src="js/travelRegister.js"></script>
+<script src="js/view_js/travelRegister.js"></script>
 </body>
 </html>
