--- a/front end/guideregister.html
+++ b/front end/guideregister.html
@@ -212,6 +212,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 	</script>
 <!-- //here ends scrolling icon -->
-<script type="text/javascript" src="js/guideRegister.js"></script>
+<script type="text/javascript" src="js/view_js/guideRegister.js"></script>
 </body>
 </html>
