--- a/front end/detail.html
+++ b/front end/detail.html
@@ -53,6 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 		});
 	</script>
+
 	<!-- pop-up -->
 </head>
 
@@ -156,7 +157,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								semper facilisis.</span>
 						</p>
 						<div class="gallery gal">
-							<div class="gallery-grids">
+							<div class="gallery-grids" id="gallery">
 								<div class="gallery-grid">
 									<a class="fancybox" href="images/6-.jpg" data-fancybox-group="gallery"><img
 											src="images/6.jpg" class="img-style row6" alt=""><span> </span></a>
@@ -399,6 +400,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		ga('create', 'UA-39205841-5', 'dobtco.github.io');
 		ga('send', 'pageview');
 	</script>
+
+	<script src="js/view_js/detail.js"></script>
+
 </body>
 
 </html>
