--- a/front end/index.html
+++ b/front end/index.html
@@ -50,11 +50,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="header-bottom-right" style="width: 400px;">
 					<span class="menu">MENU</span>
-					<ul class="nav1">
+					<ul class="nav1" id="navBar">
 						<li class="cap"><a href="index.html">HOME</a></li>
 						<li><a href="index.html">BLOG</a></li>
-						<li><a href="travellerregister.html">REGISTER</a></li>
-						<li><a href="login.html">LOGIN</a></li>
+						<li id="registerForm"><a href="travellerregister.html">REGISTER</a></li>
+						<li id="loginForm"><a href="login.html">LOGIN</a></li>
 					</ul>
 					<!-- script for menu -->
 						<script> 
@@ -221,6 +221,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 <!-- //footer -->	
 <!-- here stars scrolling icon -->
+	<script type="text/javascript" src="js/view_js/login.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			/*
@@ -238,5 +239,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</script>
 <!-- //here ends scrolling icon -->
 	<script src="js/view_js/index.js"></script>
+
 </body>
 </html>
