--- a/front end/detail.html
+++ b/front end/detail.html
@@ -17,7 +17,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/-->
 		rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700,100,400' rel='stylesheet' type='text/css'>
 	<!-- js -->
-	<script src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script src="js/star-rating.js"></script>
 	<!-- //js -->
 	<!-- for-mobile-apps -->
@@ -220,12 +220,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="com">
 							<h3>Comments</h3>
-							<ul class="media-list">
+							<ul class="media-list" id="contain">
 								<li class="media">
 									<div class="media-left">
-										<a href="#">
-											<img class="media-object" src="images/11.jpg" alt="" />
-										</a>
+										<img class="media-object" src="images/11.jpg" alt="" />
 									</div>
 									<div class="media-body">
 										<h4 class="media-heading">Simmy</h4>
@@ -278,10 +276,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="leave-a-comment">
 					<h3>Leave your comment Here</h3>
 					<form>
-						<textarea type="text" onfocus="this.value = '';"
+						<textarea id="content" type="text" onfocus="this.value = '';"
 							onblur="if (this.value == '') {this.value = 'Type Your Comment here...';}"
 							required="">Type Your Comment here...</textarea>
-						<input type="submit" value="Add Comment">
+						<input type="submit" value="Add Comment" id="sendComment">
 					</form>
 				</div>
 			</div>
@@ -366,8 +364,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		});
 	</script>
 	<!-- //here ends scrolling icon -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
 	<script src="js/starrr.js"></script>
+	<script type="text/javascript" src="js/view_js/login.js"></script>
 	<script>
 		$('#star1').starrr({
 			change: function (e, value) {
