--- a/front end/login.html
+++ b/front end/login.html
@@ -220,11 +220,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			$.ajax({
 				type : "post",
-				url: "https://localhost:49163/api/token",
+				url: "https://localhost:49155/api/token",
 				contentType: "application/json; charset=utf-8",
 				data: JSON.stringify(data),
 				success : function(responseToken){
-					localStorage.setItem('token', responseToken);
+					var array = responseToken.split("-");
+
+					localStorage.setItem('userId', array[0]);
+					localStorage.setItem('token', array[1]);
 					window.location.href = 'index.html';
 				},
 				error: function (errormessage) {
