--- a/front end/detail.html
+++ b/front end/detail.html
@@ -70,11 +70,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="header-bottom-right" style="width: 400px;">
 						<span class="menu">MENU</span>
-						<ul class="nav1">
-							<li><a href="index.html">HOME</a></li>
+						<ul class="nav1" id="navBar">
+							<li class="cap"><a href="index.html">HOME</a></li>
 							<li><a href="index.html">BLOG</a></li>
-							<li><a href="travellerregister.html">REGISTER</a></li>
-							<li><a href="login.html">LOGIN</a></li>
+							<li id="registerForm"><a href="travellerregister.html">REGISTER</a></li>
+							<li id="loginForm"><a href="login.html">LOGIN</a></li>
 						</ul>
 						<!-- script for menu -->
 						<script>
