--- a/front end/index.html
+++ b/front end/index.html
@@ -104,6 +104,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-bdy blg">
 	<div class="container">
 	<div class="blog">
+		<a href="formplace.html">Add New</a>
 		<div style="width: 800px ;margin-left: auto;margin-right: auto;margin-bottom: 47px;">
 			<h2>Blog</h2>
 		<p class="gal-txt">Nam libero tempore, cum soluta nobis est eligendi optio 
