--- a/front end/index.html
+++ b/front end/index.html
@@ -104,13 +104,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="banner-bdy blg">
 	<div class="container">
 	<div class="blog">
-		<a href="formplace.html">Add New</a>
+		
 		<div style="width: 800px ;margin-left: auto;margin-right: auto;margin-bottom: 47px;">
 			<h2>Blog</h2>
 		<p class="gal-txt">Nam libero tempore, cum soluta nobis est eligendi optio 
 		cumque nihil impedit quo minus id quod maxime placeat facere possimus,
 		omnis voluptas assumenda est, omnis dolor repellendus.</p>
 		</div>
+		
 		
 		<div style="width: 300px ;margin-left: auto;margin-right: auto;margin-bottom: 47px;">
 			
@@ -142,6 +143,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 			</div>
+			<div class="col-md-3 blog-grid">
+				<div class="blog-grid1">
+					<button onclick="location.href='formplace.html'" type="button" class="btn btn-sm btn-block h-100 btn-outline-primary" style="height: 400px;">								
+						<i style="font-size: 40px;" class="fas fa-plus"></i>
+						<br>
+						<h4>Add New</h2>
+					</button>				
+				</div>			
+			</div>
+			
 
 			<div class="clearfix"> </div>
 		</div>
@@ -240,6 +251,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</script>
 <!-- //here ends scrolling icon -->
 	<script src="js/view_js/index.js"></script>
-
+	<script src="https://kit.fontawesome.com/682c484ffe.js" crossorigin="anonymous"></script>
 </body>
 </html>
