--- a/front end/detail.html
+++ b/front end/detail.html
@@ -70,11 +70,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="header-bottom-right" style="width: 400px;">
 						<span class="menu">MENU</span>
-						<ul class="nav1" id="navBar">
-							<li class="cap"><a href="index.html">HOME</a></li>
+						<ul class="nav1">
+							<li><a href="index.html">HOME</a></li>
 							<li><a href="index.html">BLOG</a></li>
-							<li id="registerForm"><a href="travellerregister.html">REGISTER</a></li>
-							<li id="loginForm"><a href="login.html">LOGIN</a></li>
+							<li><a href="travellerregister.html">REGISTER</a></li>
+							<li><a href="login.html">LOGIN</a></li>
 						</ul>
 						<!-- script for menu -->
 						<script>
@@ -130,31 +130,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="single">
 				<div class="sing-img-text">
 					<div class="sing-img-text1">
-						<h3>Nam libero tempore, cum soluta nobis est eligendi</h3>
-						<p class="est">Maecenas et laoreet neque. Aenean tempus feugiat eros, eu convallis ligula
-							tincidunt a. Nam facilisis enim at augue viverra ultrices. Etiam nec mollis est, non
-							pulvinar arcu. Cras adipiscing nisi leo, non faucibus est commodo in. Integer nec erat
-							convallis, cursus magna et, egestas odio. Donec nec quam nibh. Nam ante ipsum, sollicitudin
-							sed augue sit amet, accumsan accumsan felis. Vivamus laoreet ligula mi.
-							<span>Nunc ornare, justo eget volutpat porttitor, massa felis rhoncus dui, eu convallis enim
-								lectus vel velit. Nam ac aliquam ligula, ultrices blandit leo. Suspendisse sed semper
-								libero. Integer bibendum orci non mauris pharetra scelerisque. Nunc vitae tempor augue,
-								in condimentum mi. In eu velit hendrerit, tempor tortor at, hendrerit erat. Donec
-								feugiat tristique turpis non sagittis. Donec pharetra hendrerit vulputate.</span>
-							Phasellus facilisis tincidunt velit, ac tincidunt diam fermentum consectetur. Cum sociis
-							natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vel facilisis
-							lorem. Vivamus non feugiat mauris, et rhoncus est. Curabitur aliquam ac lacus ac facilisis.
-							Sed sodales ut nibh eget lacinia. Morbi malesuada semper elit eu interdum. Ut et tellus non
-							enim tristique lacinia. Duis neque sem, vehicula id augue quis, porttitor consectetur
-							tellus. Sed risus massa, tristique vitae tempus vitae, bibendum sit amet metus. Vestibulum
-							in fermentum neque.
-							<span>Vestibulum condimentum est feugiat, porta massa at, fermentum magna. Fusce et porta
-								risus, sed sagittis dolor. Nunc lectus felis, mattis sed congue eget, dictum vitae nisi.
-								Cras non sodales est. Aliquam mollis consequat facilisis. Interdum et malesuada fames ac
-								ante ipsum primis in faucibus. Nulla facilisi. Proin suscipit odio vitae imperdiet
-								varius. Mauris elementum enim eget vestibulum imperdiet. Aliquam mollis purus dui, eget
-								aliquet elit malesuada ut. Donec mollis sapien eu ultrices molestie. Cras consectetur
-								semper facilisis.</span>
+						<h3></h3>
+						<p class="est">
 						</p>
 						<div class="gallery gal">
 							<div class="gallery-grids" id="gallery">
@@ -180,29 +157,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="clearfix"> </div>
 							</div>
-							<div class="gallery-grids">
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/6-.jpg" data-fancybox-group="gallery"><img
-											src="images/6.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/5-.jpg" data-fancybox-group="gallery"><img
-											src="images/5.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid1">
-									<a class="fancybox" href="images/8-.jpg" data-fancybox-group="gallery"><img
-											src="images/8.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/10-.jpg" data-fancybox-group="gallery"><img
-											src="images/10.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid1">
-									<a class="fancybox" href="images/9-.jpg" data-fancybox-group="gallery"><img
-											src="images/9.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-
-							</div>
 						</div>
 						<div class="list">
 							<ul>
@@ -219,54 +173,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</span>
 						</div>
 						<div class="com">
-							<h3>Comments</h3>
+							<h4>Comments</h4>
 							<ul class="media-list" id="contain">
-								<li class="media">
-									<div class="media-left">
-										<img class="media-object" src="images/11.jpg" alt="" />
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Simmy</h4>
-										Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-										scelerisque ante sollicitudin commodo. Cras purus odio,
-										vestibulum in vulputate at, tempus viverra turpis.
-										Fusce condimentum nunc ac nisi vulputate fringilla.
-										Donec lacinia congue felis in faucibus.
-										<a href="#">Reply</a>
-									</div>
-								</li>
-								<li class="media">
-									<div class="media-left">
-										<a href="#">
-											<img class="media-object" src="images/13.jpg" alt="" />
-										</a>
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Sandra Rickon</h4>
-										Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-										scelerisque ante sollicitudin commodo. Cras purus odio,
-										vestibulum in vulputate at, tempus viverra turpis.
-										Fusce condimentum nunc ac nisi vulputate fringilla.
-										Donec lacinia congue felis in faucibus.
-										<a href="#">Reply</a>
-									</div>
-								</li>
-								<li class="media">
-									<div class="media-left">
-										<a href="#">
-											<img class="media-object" src="images/12.jpg" alt="" />
-										</a>
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">Rita Rider</h4>
-										Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
-										scelerisque ante sollicitudin commodo. Cras purus odio,
-										vestibulum in vulputate at, tempus viverra turpis.
-										Fusce condimentum nunc ac nisi vulputate fringilla.
-										Donec lacinia congue felis in faucibus.
-										<a href="#">Reply</a>
-									</div>
-								</li>
 							</ul>
 						</div>
 
@@ -365,7 +273,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</script>
 	<!-- //here ends scrolling icon -->
 	<script src="js/starrr.js"></script>
-	<script type="text/javascript" src="js/view_js/login.js"></script>
 	<script>
 		$('#star1').starrr({
 			change: function (e, value) {
