--- a/front end/formplace.html
+++ b/front end/formplace.html
@@ -229,7 +229,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			$("#submitButton").click(function () {
 				var form = new FormData($("#placeForm")[0]);
 				$.ajax({
-					url: "https://localhost:49161/api/places",
+					url: "https://travelservice2021.azurewebsites.net/api/places",
 					type: "POST",
 					dataType: 'text',
 					data: form,
