--- a/front end/formimage.html
+++ b/front end/formimage.html
@@ -215,7 +215,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script>
 	$(document).ready(function () {
 		$("#submitButton").click(function () {
-			$("#imageSubmit").ajaxForm({url: 'https://localhost:49157/api/images', type: 'post'});
+			$("#imageSubmit").ajaxForm({url: 'https://travelservice2021.azurewebsites.net/api/images', type: 'post'});
 			location.reload();
 		})
 
