--- a/front end/login.html
+++ b/front end/login.html
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			$.ajax({
 				type : "post",
-				url: "https://travelservice2021.azurewebsites.net/api/token",
+				url: "https://localhost:5001//api/token",
 				contentType: "application/json; charset=utf-8",
 				data: JSON.stringify(data),
 				success : function(responseToken){
