--- a/front end/guideregister.html
+++ b/front end/guideregister.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  				
 				<div style="width: 550px ;margin-left: auto;margin-right: auto;margin-bottom: 47px; margin-top: 47px;">
 				<form>
-					<div id="Message" class="alert alert-danger hiddenField" role="alert"></div>
+					<div id="message" class="alert alert-danger hiddenField" role="alert"></div>
 					<div class="form-group">
 						<label for="username">User Name</label>
 						<input type="text" class="form-control" id="username" aria-describedby="username" placeholder="Enter username">
