--- a/front end/detail.html
+++ b/front end/detail.html
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 
-
+	
 	<div class="banner-bdy sig">
 		<div class="container">
 			<div class="single">
@@ -132,29 +132,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3 id="title"></h3>
 						<p class="est">
 						</p>
+						<button type="button"  id="addImageButton">Add Image</button>
 						<div class="gallery gal">
 							<div class="gallery-grids" id="gallery">
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/6-.jpg" data-fancybox-group="gallery"><img
-											src="images/6.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid1">
-									<a class="fancybox" href="images/8-.jpg" data-fancybox-group="gallery"><img
-											src="images/8.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/5-.jpg" data-fancybox-group="gallery"><img
-											src="images/5.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid1">
-									<a class="fancybox" href="images/9-.jpg" data-fancybox-group="gallery"><img
-											src="images/9.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="gallery-grid">
-									<a class="fancybox" href="images/10-.jpg" data-fancybox-group="gallery"><img
-											src="images/10.jpg" class="img-style row6" alt=""><span> </span></a>
-								</div>
-								<div class="clearfix"> </div>
+								
 							</div>
 						</div>
 						<div class="list">
