--- a/front end/formplace.html
+++ b/front end/formplace.html
@@ -239,6 +239,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					contentType: false,
 					success: function(result){
 						console.log("success");
+						window.location.href = "index.html";
 					},
 					error: function(er){
 						console.log("failed");
