--- a/front end/detail.html
+++ b/front end/detail.html
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 <body>
 	<!-- banner -->
-	<div class="banner-with-text">
+	<div class="banner-with-text" id="banner">
 		<div class="container">
 			<!-- header -->
 			<div class="header">
