--- a/front end/formimage.html
+++ b/front end/formimage.html
@@ -234,13 +234,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				contentType: false,
 				success: function(result){
 					console.log("success");
+					window.location.href = "detail.html?placeId="+placeId;
 				},
 				error: function(er){
 					console.log("failed");
 				}
 			});
 
-			//location.reload();
+			
 		})
 
 	})
